# Devops-Course-Starter

./: .dockerignore  .env.dev  .env.j2  .env.template  .env.test  .gitignore  .terraform.lock.hcl  Dockerfile  Inventory  README.md  docker-compose.yml  keypair  keypair.pub  main.tf  package-lock.json  pyproject.toml  requirements.txt  ruby_playbook  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
.github/workflows/: my-ci-pipeline.yml
todo_app/: app.py  flask_config.py  mongodb_items.py  test_app.py  test_integration.py  trello_items.py
todo_app/data/: session_items.py
todo_app/static/: sketchy.css
todo_app/templates/: index.html  layout.html
